--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
