--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "tailwind-scrollbar": "^3.1.0"
   },
