--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
