--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
