--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
