--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# .env files
+.env
+.env.*
+
+# Mac OS X specific
+.DS_Store
+
+# Windows specific
+Thumbs.db
