--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.438.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chart-race": "^0.0.3",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
