--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "google-spreadsheet": "^4.1.4",
     "socket.io": "^4.1.2",
     "tailwindcss": "^3.4.4"
   },
