--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "@reduxjs/toolkit": "^2.2.7",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "axios": "^1.7.2",
@@ -28,13 +29,18 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "react-redux-store": "^1.2.1",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
+    "swiper": "^11.1.14",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
